<resources>
    <string name="app_name">Exercise 1</string>
    <string name="hintEtEmailLogin">Masukkan E-Mail</string>
    <string name="hintEtPasswordLogin">Masukkan Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnRegister">Belum Terdaftar ?</string>
    <string name="tData">Data Anda</string>
    <string name="txEmail">Ini hasil Email</string>
    <string name="txPassword">Ini hasil Password</string>
    <string name="var1">ini pesan</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="eRePass">Masukkan Password Kembali</string>
    <string name="eAlamat">Masukkan Alamat</string>
    <string name="lihatData">Lihat Data</string>
    <string name="editData">Lihat Nomor</string>
    <string name="namaItem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="daftarKontak">Daftar Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="jKelamin">Jenis Kelamin</string>
    <string name="agama">Agama</string>
    <string name="searchName">Cari berdasarkan nama ...</string>
</resources>