<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity">

    <TextView
        android:id="@+id/tvPendaftaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mDaftar"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <View
        android:id="@+id/divider"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:background="@color/devider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPendaftaran"
        app:layout_constraintVertical_bias="0.016" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.02">

        <EditText
            android:id="@+id/etNamaRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eNama"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="0.1"
            tools:textSize="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.02">

        <EditText
            android:id="@+id/etAlamatRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eAlamat"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintVertical_bias="0.1"
            tools:textSize="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvJenisKelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jKelamin"

        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.042" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="255dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toEndOf="@+id/tvJenisKelamin"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.030">

        <RadioButton
            android:id="@+id/rbJKPr"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Laki - laki"
            android:textSize="12dp" />

        <RadioButton
            android:id="@+id/rbJKLk"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Perempuan"
            android:textSize="12dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAgama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agama"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJenisKelamin"
        app:layout_constraintVertical_bias="0.066" />

    <RadioButton
        android:id="@+id/rbAgmIslam"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Islam"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toEndOf="@+id/tvAgama"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.026" />

    <RadioButton
        android:id="@+id/rbAgmHindu"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:height="30dp"
        android:text="Hindu"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toEndOf="@+id/rbAgmIslam"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.026" />

    <RadioButton
        android:id="@+id/rbAgmKatolik"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:text="Katolik"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toEndOf="@+id/tvAgama"
        app:layout_constraintTop_toBottomOf="@+id/rbAgmIslam"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/rbAgmProtestan"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="Protestan"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toEndOf="@+id/tvAgama"
        app:layout_constraintTop_toBottomOf="@+id/rbAgmKatolik"
        app:layout_constraintVertical_bias="0.018" />

    <RadioButton
        android:id="@+id/rbAgmKongHuCu"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:text="Konghucu"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toEndOf="@+id/tvAgama"
        app:layout_constraintTop_toBottomOf="@+id/rbAgmBudha"
        app:layout_constraintVertical_bias="0" />

    <RadioButton
        android:id="@+id/rbAgmPK"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginTop="11dp"
        android:height="30dp"
        android:text="Penganut Kepercayaan"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/rbAgmHindu"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/rbAgmBudha"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:height="30dp"
        android:text="Budha"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/tvAgama"
        app:layout_constraintTop_toBottomOf="@+id/rbAgmHindu"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbAgmProtestan"
        app:layout_constraintVertical_bias="0.02"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etEmailRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbAgmProtestan"
            app:layout_constraintVertical_bias="0.059"
            tools:textSize="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        app:layout_constraintVertical_bias="0.04"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ePass"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:layout_constraintVertical_bias="0.30"
            tools:textSize="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
        app:layout_constraintVertical_bias="0.05">

        <EditText
            android:id="@+id/etRePasswordRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eRePass"
            android:inputType="textPassword"
            android:textSize="12dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:layout_constraintVertical_bias="0.30" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmitRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/button_login"
        android:text="DAFTAR"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        app:layout_constraintVertical_bias="0.541"
        tools:textSize="11dp" />

    <Button
        android:id="@+id/btnBatalRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/button_login"
        android:text="BATAL"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmitRegister"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        app:layout_constraintVertical_bias="0.541"
        tools:textSize="11dp" />

</androidx.constraintlayout.widget.ConstraintLayout>